--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pl">
     <head>
         <meta charset="UTF-8" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+        />
         <link rel="stylesheet" href="CSS/styles.css" />
         <title>WebStudio</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
