--- a/index.html
+++ b/index.html
@@ -16,25 +16,27 @@
         />
     </head>
     <body>
-        <header class="header-sidebar">
-            <div class="header-styles">
-                <h2>
-                    <a href="index.html"
-                        ><span class="logo-web">Web</span
-                        ><span class="logo-studio">Studio</span></a
-                    >
-                </h2>
-            </div>
-            <div class="navi">
-                <nav class="navi-type">
-                    <a href="Agencja">Agencja</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="Kontakt">Kontakt</a>
-                </nav>
-            </div>
-            <div class="contacts">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+48111111111">+48 111 111 111</a>
+        <header class="container">
+            <div class="header-sidebar">
+                <div class="header-styles">
+                    <h2>
+                        <a href="index.html"
+                            ><span class="logo-web">Web</span
+                            ><span class="logo-studio">Studio</span></a
+                        >
+                    </h2>
+                </div>
+                <div class="navi">
+                    <nav class="navi-type">
+                        <a href="Agencja">Agencja</a>
+                        <a href="portfolio.html">Portfolio</a>
+                        <a href="Kontakt">Kontakt</a>
+                    </nav>
+                </div>
+                <div class="contacts">
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="tel:+48111111111">+48 111 111 111</a>
+                </div>
             </div>
         </header>
         <main>
