update container class

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,7 @@
             </div>
         </header>
         <main>
+            <div class="container">
             <div class="portfolio">
                 <div class="portfolio-filters-buttons">
                     <button class="filters-buttons" type="button">
@@ -223,8 +224,10 @@
                     </li>
                 </ul>
             </div>
+            </div>
         </main>
-        <footer class="footer-sidebar">
+        <footer class="container">
+            <div class="footer-sidebar">
             <h2 class="footer-styles">
                 <a href="index.html"
                     ><span class="logo-web-footer">Web</span
@@ -236,6 +239,7 @@
                 <br />
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
                 <a href="tel:+48111111111">+48 111 111 111</a>
+            </div>
             </div>
         </footer>
     </body>
