supplementing class banner

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="container">
                 <div class="banner">
                     <h1 class="banner-text">
-                        EFEKTYWNE ROZWIĄZANIA DLA<br />
-                        WASZEGO BIZNESU
+                        EFEKTYWNE ROZWIĄZANIA<br />
+                        DLA WASZEGO BIZNESU
                     </h1>
                     <button class="banner-button" type="button">
                         Zamów usługę
