--- a/index.html
+++ b/index.html
@@ -16,201 +16,186 @@
         />
     </head>
     <body>
-        <header class="container">
-            <div class="header-sidebar">
-                <div class="header-styles">
-                    <h2>
-                        <a href="index.html"
-                            ><span class="logo-web">Web</span
-                            ><span class="logo-studio">Studio</span></a
-                        >
-                    </h2>
-                </div>
-                <div class="navi">
-                    <nav class="navi-type">
-                        <a href="Agencja">Agencja</a>
-                        <a href="portfolio.html">Portfolio</a>
-                        <a href="Kontakt">Kontakt</a>
-                    </nav>
-                </div>
-                <div class="contacts">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    <a href="tel:+48111111111">+48 111 111 111</a>
-                </div>
+        <header class="header-sidebar">
+            <div class="header-styles">
+                <h2>
+                    <a href="index.html"
+                        ><span class="logo-web">Web</span
+                        ><span class="logo-studio">Studio</span></a
+                    >
+                </h2>
+            </div>
+            <div class="navi">
+                <nav class="navi-type">
+                    <a href="Agencja">Agencja</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a href="Kontakt">Kontakt</a>
+                </nav>
+            </div>
+            <div class="contacts">
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+48111111111">+48 111 111 111</a>
             </div>
         </header>
         <main>
-            <div class="container">
-                <div class="banner">
-                    <h1 class="banner-text">
-                        EFEKTYWNE ROZWIĄZANIA<br />
-                        DLA WASZEGO BIZNESU
-                    </h1>
-                    <button class="banner-button" type="button">
-                        Zamów usługę
-                    </button>
+            <div class="banner">
+                <h1 class="banner-text">
+                    EFEKTYWNE ROZWIĄZANIA DLA<br />
+                    WASZEGO BIZNESU
+                </h1>
+                <button class="banner-button" type="button">
+                    Zamów usługę
+                </button>
+            </div>
+            <div class="advantages">
+                <ul class="advantages-list">
+                    <li>
+                        <h4>LOREM IPSUM</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
+                    </li>
+                    <li>
+                        <h4>LOREM IPSUM</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
+                    </li>
+                    <li>
+                        <h4>LOREM IPSUM</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
+                    </li>
+                    <li>
+                        <h4>LOREM IPSUM</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Nam vel arcu sem. Sed non sodales dui.
+                            Interdum et malesuada
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="what-we-do">
+                <div>
+                    <h2>Czym się zajmujemy</h2>
                 </div>
-                <div class="advantages">
-                    <ul class="advantages-list">
-                        <li>
-                            <h4>LOREM IPSUM</h4>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Nam vel arcu sem. Sed non
-                                sodales dui. Interdum et malesuada
-                            </p>
-                        </li>
-                        <li>
-                            <h4>LOREM IPSUM</h4>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Nam vel arcu sem. Sed non
-                                sodales dui. Interdum et malesuada
-                            </p>
-                        </li>
-                        <li>
-                            <h4>LOREM IPSUM</h4>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Nam vel arcu sem. Sed non
-                                sodales dui. Interdum et malesuada
-                            </p>
-                        </li>
-                        <li>
-                            <h4>LOREM IPSUM</h4>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Nam vel arcu sem. Sed non
-                                sodales dui. Interdum et malesuada
-                            </p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="what-we-do">
-                    <div>
-                        <h2>Czym się zajmujemy</h2>
-                    </div>
-                    <ul>
-                        <li>
+                <ul>
+                    <li>
+                        <img
+                            src="images/obraz1.jpg"
+                            alt="computer aplications"
+                            width="370"
+                            height="294"
+                        />
+                    </li>
+                    <li>
+                        <img
+                            src="images/obraz2.jpg"
+                            alt="smartfon aplications"
+                            width="370"
+                            height="294"
+                        />
+                    </li>
+                    <li>
+                        <img
+                            src="images/obraz3.jpg"
+                            alt="color palette"
+                            width="370"
+                            height="294"
+                        />
+                    </li>
+                </ul>
+            </div>
+            <div class="our-team">
+                <h2>Nasz zespół</h2>
+                <ul>
+                    <li>
+                        <figure class="our-team-worker">
                             <img
-                                src="images/obraz1.jpg"
-                                alt="computer aplications"
-                                width="370"
-                                height="294"
+                                src="images/zespol1.jpg"
+                                alt="Product Designer"
+                                width="270"
+                                height="260"
                             />
-                        </li>
-                        <li>
+                            <figcaption>
+                                <h4 class="our-team-worker-name">John Doe</h4>
+                                <p class="our-team-worker-description">
+                                    Product Designer
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure class="our-team-worker">
                             <img
-                                src="images/obraz2.jpg"
-                                alt="smartfon aplications"
-                                width="370"
-                                height="294"
+                                src="images/zespol2.jpg"
+                                alt="Frontend Developer"
+                                width="270"
+                                height="260"
                             />
-                        </li>
-                        <li>
+                            <figcaption>
+                                <h4 class="our-team-worker-name">John Doe</h4>
+                                <p class="our-team-worker-description">
+                                    Frontend Developer
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure class="our-team-worker">
                             <img
-                                src="images/obraz3.jpg"
-                                alt="color palette"
-                                width="370"
-                                height="294"
+                                src="images/zespol3.jpg"
+                                alt="Marketing"
+                                width="270"
+                                height="260"
                             />
-                        </li>
-                    </ul>
-                </div>
-                <div class="our-team">
-                    <h2>Nasz zespół</h2>
-                    <ul>
-                        <li>
-                            <figure class="our-team-worker">
-                                <img
-                                    src="images/zespol1.jpg"
-                                    alt="Product Designer"
-                                    width="270"
-                                    height="260"
-                                />
-                                <figcaption>
-                                    <h4 class="our-team-worker-name">
-                                        John Doe
-                                    </h4>
-                                    <p class="our-team-worker-description">
-                                        Product Designer
-                                    </p>
-                                </figcaption>
-                            </figure>
-                        </li>
-                        <li>
-                            <figure class="our-team-worker">
-                                <img
-                                    src="images/zespol2.jpg"
-                                    alt="Frontend Developer"
-                                    width="270"
-                                    height="260"
-                                />
-                                <figcaption>
-                                    <h4 class="our-team-worker-name">
-                                        John Doe
-                                    </h4>
-                                    <p class="our-team-worker-description">
-                                        Frontend Developer
-                                    </p>
-                                </figcaption>
-                            </figure>
-                        </li>
-                        <li>
-                            <figure class="our-team-worker">
-                                <img
-                                    src="images/zespol3.jpg"
-                                    alt="Marketing"
-                                    width="270"
-                                    height="260"
-                                />
-                                <figcaption>
-                                    <h4 class="our-team-worker-name">
-                                        John Doe
-                                    </h4>
-                                    <p class="our-team-worker-description">
-                                        Marketing
-                                    </p>
-                                </figcaption>
-                            </figure>
-                        </li>
-                        <li>
-                            <figure class="our-team-worker">
-                                <img
-                                    src="images/zespol4.jpg"
-                                    alt="UI Designer"
-                                    width="270"
-                                    height="260"
-                                />
-                                <figcaption>
-                                    <h4 class="our-team-worker-name">
-                                        John Doe
-                                    </h4>
-                                    <p class="our-team-worker-description">
-                                        UI Designer
-                                    </p>
-                                </figcaption>
-                            </figure>
-                        </li>
-                    </ul>
-                </div>
+                            <figcaption>
+                                <h4 class="our-team-worker-name">John Doe</h4>
+                                <p class="our-team-worker-description">
+                                    Marketing
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure class="our-team-worker">
+                            <img
+                                src="images/zespol4.jpg"
+                                alt="UI Designer"
+                                width="270"
+                                height="260"
+                            />
+                            <figcaption>
+                                <h4 class="our-team-worker-name">John Doe</h4>
+                                <p class="our-team-worker-description">
+                                    UI Designer
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
             </div>
         </main>
-        <footer class="container">
-            <div class="footer-sidebar">
-                <h2 class="footer-styles">
-                    <a href="index.html"
-                        ><span class="logo-web-footer">Web</span
-                        ><span class="logo-studio-footer">Studio</span></a
-                    >
-                </h2>
-                <div class="footer-address">
-                    <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-                    <br />
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a
-                    ><br />
-                    <a href="tel:+48111111111">+48 111 111 111</a>
-                </div>
+        <footer class="footer-sidebar">
+            <h2 class="footer-styles">
+                <a href="index.html"
+                    ><span class="logo-web-footer">Web</span
+                    ><span class="logo-studio-footer">Studio</span></a
+                >
+            </h2>
+            <div class="footer-address">
+                <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+                <br />
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+                <a href="tel:+48111111111">+48 111 111 111</a>
             </div>
         </footer>
     </body>
