update header and banner

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         />
     </head>
     <body>
-        <header class="header-sidebar">
+        <header class="container header-sidebar">
             <div class="header-styles">
                 <h2>
                     <a href="index.html"
@@ -38,16 +38,16 @@
             </div>
         </header>
         <main>
-            <div class="banner">
+            <div class="container banner">
                 <h1 class="banner-text">
-                    EFEKTYWNE ROZWIĄZANIA DLA<br />
-                    WASZEGO BIZNESU
+                    EFEKTYWNE ROZWIĄZANIA<br />
+                    DLA WASZEGO BIZNESU
                 </h1>
                 <button class="banner-button" type="button">
                     Zamów usługę
                 </button>
             </div>
-            <div class="advantages">
+            <div class="container advantages">
                 <ul class="advantages-list">
                     <li>
                         <h4>LOREM IPSUM</h4>
