supplementing data in index.tml

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="what-we-do">
+            <div class="container what-we-do">
                 <div>
                     <h2>Czym się zajmujemy</h2>
                 </div>
@@ -114,7 +114,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="our-team">
+            <div class="container our-team">
                 <h2>Nasz zespół</h2>
                 <ul>
                     <li>
@@ -185,15 +185,14 @@
             </div>
         </main>
         <footer class="footer-sidebar">
-            <h2 class="footer-styles">
+            <h2 class="container footer-styles">
                 <a href="index.html"
                     ><span class="logo-web-footer">Web</span
                     ><span class="logo-studio-footer">Studio</span></a
                 >
             </h2>
-            <div class="footer-address">
+            <div class="container footer-address">
                 <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-                <br />
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
                 <a href="tel:+48111111111">+48 111 111 111</a>
             </div>
