supplementing data portfolio index and styles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </button>
             </div>
             <div class="container advantages">
-                <ul class="advantages-list">
+                <ul class="section advantages-list">
                     <li>
                         <h4>LOREM IPSUM</h4>
                         <p>
