--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             </div>
         </header>
         <main>
-                <div class="container portfolio">
+                <div class="container section portfolio">
                     <div class="portfolio-filters-buttons">
                         <button class="filters-buttons" type="button">
                             Wszystkie
