--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
             </div>
         </header>
         <main>
-            <div class="container banner">
-                <h1 class="banner-text">
-                    EFEKTYWNE ROZWIĄZANIA<br />
-                    DLA WASZEGO BIZNESU
-                </h1>
-                <button class="banner-button" type="button">
-                    Zamów usługę
-                </button>
+            <div class="banner">
+                <div class="container">
+                    <h1 class="banner-text">
+                        EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+                    </h1>
+                    <button class="banner-button" type="button">
+                        Zamów usługę
+                    </button>
+                </div>
             </div>
             <div class="container advantages">
                 <ul class="section advantages-list">
@@ -184,14 +185,14 @@
                 </ul>
             </div>
         </main>
-        <footer class="footer-sidebar">
-            <h2 class="container footer-styles">
+        <footer class="container footer-sidebar">
+            <h2 class="footer-styles">
                 <a href="index.html"
                     ><span class="logo-web-footer">Web</span
                     ><span class="logo-studio-footer">Studio</span></a
                 >
             </h2>
-            <div class="container footer-address">
+            <div class="footer-address">
                 <address>m. Warszawa, Aleje Jerozolimskie 21</address>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
                 <a href="tel:+48111111111">+48 111 111 111</a>
