supplementining changes in portfolio.html and styles.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -223,17 +223,20 @@
                 </div>
             </div>
         </main>
-        <footer class="footer-sidebar">
-            <h2 class="container footer-styles">
-                <a href="index.html"
-                    ><span class="logo-web-footer">Web</span
-                    ><span class="logo-studio-footer">Studio</span></a
-                >
-            </h2>
-            <div class="container footer-address">
-                <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-                <a href="tel:+48111111111">+48 111 111 111</a>
+      <footer class="footer-sidebar">
+            <div class="container">
+                <h2 class="footer-styles">
+                    <a href="index.html"
+                        ><span class="logo-web-footer">Web</span
+                        ><span class="logo-studio-footer">Studio</span></a
+                    >
+                </h2>
+                <div class="footer-address">
+                    <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a
+                    ><br />
+                    <a href="tel:+48111111111">+48 111 111 111</a>
+                </div>
             </div>
         </footer>
     </body>
