--- a/index.html
+++ b/index.html
@@ -115,87 +115,100 @@
                     </li>
                 </ul>
             </div>
-            <div class="container our-team">
-                <h2>Nasz zespół</h2>
-                <ul>
-                    <li>
-                        <figure class="our-team-worker">
-                            <img
-                                src="images/zespol1.jpg"
-                                alt="Product Designer"
-                                width="270"
-                                height="260"
-                            />
-                            <figcaption>
-                                <h4 class="our-team-worker-name">John Doe</h4>
-                                <p class="our-team-worker-description">
-                                    Product Designer
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="our-team-worker">
-                            <img
-                                src="images/zespol2.jpg"
-                                alt="Frontend Developer"
-                                width="270"
-                                height="260"
-                            />
-                            <figcaption>
-                                <h4 class="our-team-worker-name">John Doe</h4>
-                                <p class="our-team-worker-description">
-                                    Frontend Developer
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="our-team-worker">
-                            <img
-                                src="images/zespol3.jpg"
-                                alt="Marketing"
-                                width="270"
-                                height="260"
-                            />
-                            <figcaption>
-                                <h4 class="our-team-worker-name">John Doe</h4>
-                                <p class="our-team-worker-description">
-                                    Marketing
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="our-team-worker">
-                            <img
-                                src="images/zespol4.jpg"
-                                alt="UI Designer"
-                                width="270"
-                                height="260"
-                            />
-                            <figcaption>
-                                <h4 class="our-team-worker-name">John Doe</h4>
-                                <p class="our-team-worker-description">
-                                    UI Designer
-                                </p>
-                            </figcaption>
-                        </figure>
-                    </li>
-                </ul>
+            <div class="our-team section">
+                <div class="container">
+                    <h2>Nasz zespół</h2>
+                    <ul>
+                        <li>
+                            <figure class="our-team-worker">
+                                <img
+                                    src="images/zespol1.jpg"
+                                    alt="Product Designer"
+                                    width="270"
+                                    height="260"
+                                />
+                                <figcaption>
+                                    <h4 class="our-team-worker-name">
+                                        John Doe
+                                    </h4>
+                                    <p class="our-team-worker-description">
+                                        Product Designer
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="our-team-worker">
+                                <img
+                                    src="images/zespol2.jpg"
+                                    alt="Frontend Developer"
+                                    width="270"
+                                    height="260"
+                                />
+                                <figcaption>
+                                    <h4 class="our-team-worker-name">
+                                        John Doe
+                                    </h4>
+                                    <p class="our-team-worker-description">
+                                        Frontend Developer
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="our-team-worker">
+                                <img
+                                    src="images/zespol3.jpg"
+                                    alt="Marketing"
+                                    width="270"
+                                    height="260"
+                                />
+                                <figcaption>
+                                    <h4 class="our-team-worker-name">
+                                        John Doe
+                                    </h4>
+                                    <p class="our-team-worker-description">
+                                        Marketing
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure class="our-team-worker">
+                                <img
+                                    src="images/zespol4.jpg"
+                                    alt="UI Designer"
+                                    width="270"
+                                    height="260"
+                                />
+                                <figcaption>
+                                    <h4 class="our-team-worker-name">
+                                        John Doe
+                                    </h4>
+                                    <p class="our-team-worker-description">
+                                        UI Designer
+                                    </p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </main>
-        <footer class="container footer-sidebar">
-            <h2 class="footer-styles">
-                <a href="index.html"
-                    ><span class="logo-web-footer">Web</span
-                    ><span class="logo-studio-footer">Studio</span></a
-                >
-            </h2>
-            <div class="footer-address">
-                <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-                <a href="tel:+48111111111">+48 111 111 111</a>
+        <footer class="footer-sidebar">
+            <div class="container">
+                <h2 class="footer-styles">
+                    <a href="index.html"
+                        ><span class="logo-web-footer">Web</span
+                        ><span class="logo-studio-footer">Studio</span></a
+                    >
+                </h2>
+                <div class="footer-address">
+                    <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a
+                    ><br />
+                    <a href="tel:+48111111111">+48 111 111 111</a>
+                </div>
             </div>
         </footer>
     </body>
