adding padding to .container and removing padding from .section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="container what-we-do">
+            <div class="container section what-we-do">
                 <div>
                     <h2>Czym się zajmujemy</h2>
                 </div>
