added new class header-border
added new class header-bordet to index and portfolio, removed border-bottom from class header-sidebar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         />
     </head>
     <body>
-        <header class="container header-sidebar">
+        <header class="header-border">
+            <div class="container header-sidebar">
             <div class="header-styles">
                 <h2>
                     <a class="logo" href="index.html"
@@ -35,6 +36,7 @@
             <div class="contacts">
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a href="tel:+48111111111">+48 111 111 111</a>
+            </div>
             </div>
         </header>
         <main>
