--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <div class="header-styles">
                 <h2>
                     <a class="logo" href="index.html"
-                        >Web</span
-                        ><span class="logo-studio">Studio</span></a
+                        >Web<span class="logo-studio">Studio</span></a
                     >
                 </h2>
             </div>
@@ -201,8 +200,7 @@
             <div class="container">
                 <h2 class="footer-styles">
                     <a class="logo" href="index.html"
-                        >Web</span
-                        ><span class="logo-studio-footer">Studio</span></a
+                        >Web<span class="logo-studio-footer">Studio</span></a
                     >
                 </h2>
                 <div class="footer-address">
